--- a/API/API.csproj
+++ b/API/API.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameWorkCore.Sqlite" Version="7.0.7" />
+    <PackageReference Include="Stripe.Net" Version="41.22.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
